# HTML-Theme-and-Element-editor

./: .gitignore  package.json
client/: .eslintcache  .gitignore  package-lock.json  package.json
client/public/: index.html
client/src/: App.test.js  index.css  index.js
client/src/components/: ColorPaletteSelector.js  ColorPicker.js  FontPicker.js  FontSize.js  NavBar.js  NavigationBarCustomizer.js  RangeSlider.js  StaticStepper.js  StyledButton.js
client/src/models/: randomPalette.js
client/src/redux/reducers/: todos.js
client/src/styles/: ColorPicker.css  CreateTheme.css  FontPicker.css  FontSize.css  Main.css  RangeSlider.css  ThemeCreator.css
client/src/views/: Main.js  ThemeCreator.js  createAccount.js  createElement.js  createTheme.js  exploreElements.js  exploreThemes.js
server/: pyproject.toml  run-server.bat  run-server.sh
server/server/: app.py
