[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Spilkey <spilkey1234@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
seaborn = "^0.11.0"
Flask-Cors = "^3.0.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
